--- a/SECB/app/src/main/res/layout-ar/header.xml
+++ b/SECB/app/src/main/res/layout-ar/header.xml
@@ -9,7 +9,7 @@
     android:background="#99909090" >
 
     <ImageView
-        android:id="@+id/imageViewBackHeader"
+        android:id="@+id/imageViewMenuHeader"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentRight="true"
@@ -17,7 +17,7 @@
 
         android:layout_marginLeft="20dp"
         android:layout_marginRight="20dp"
-        android:src="@drawable/header_back_btn_ar" />
+        android:src="@drawable/menu_button" />
 
     <TextView
         android:id="@+id/textViewTitleHeader"
@@ -33,14 +33,14 @@
 
 
     <ImageView
-        android:id="@+id/imageViewMenuHeader"
+        android:id="@+id/imageViewBackHeader"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
         android:layout_centerVertical="true"
         android:paddingLeft="20dp"
         android:paddingRight="20dp"
-        android:src="@drawable/menu_button"
+        android:src="@drawable/header_back_btn"
         android:visibility="visible" />
 
 </RelativeLayout>
