--- a/SECB/app/src/main/res/layout-ar/menu.xml
+++ b/SECB/app/src/main/res/layout-ar/menu.xml
@@ -4,21 +4,11 @@
     android:layout_height="match_parent"
     android:background="@drawable/menu_bg" >
 
-<!--    <TextView
+    <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Items"
         android:layout_centerInParent="true"
-        android:textColor="@color/white" />-->
-
-    <android.support.v7.widget.RecyclerView
-        android:layout_marginTop="@dimen/menu_margin_top"
-        android:layout_marginBottom="@dimen/menu_margin_top"
-        android:id="@+id/menuItemRecyclerView"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        >
-
-    </android.support.v7.widget.RecyclerView>
+        android:textColor="@color/white" />
 
 </RelativeLayout>
