--- a/SECB/app/src/main/res/layout/main.xml
+++ b/SECB/app/src/main/res/layout/main.xml
@@ -1,4 +1,5 @@
-<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v4.widget.DrawerLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/drawerLayoutMainDialer"
     android:layout_width="match_parent"
@@ -18,24 +19,14 @@
             android:orientation="vertical"
             android:background="@android:color/transparent"/>
         
-        <com.s2c.common.android.view.components.HeaderLayout
+        <com.secb.android.view.components.HeaderLayout
             android:id="@+id/headerLayoutHome"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal" />
     </RelativeLayout>
 
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="match_parent"
-        android:layout_gravity="end"
-        android:choiceMode="singleChoice" >
+    <include android:id="@+id/menuContainer" layout="@layout/side_menu"/>
 
-        <fragment
-            android:id="@+id/fragmentLeftMenu"
-            android:layout_width="200dp"
-            android:layout_height="match_parent"
-            class="com.s2c.common.android.view.menu.MenuFragment" />
-    </LinearLayout>
 
 </android.support.v4.widget.DrawerLayout>
