--- a/SECB/app/src/main/res/values/colors.xml
+++ b/SECB/app/src/main/res/values/colors.xml
@@ -6,7 +6,12 @@
     <color name="gba_blog_list_lgrey">#e6e7e8</color>
     <color name="gba_menu_item_select">#4Acdd1d5</color>
 	<color name="gba_blog_det_darker">#52000000</color>
-	
+
+    <!--SECB colors-->
+    <color name="sceb_dark_blue">#122d53</color>
+    <color name="sceb_orange">#e5952f</color>
+    <color name="sceb_grey">#6e6f79</color>
+
     <color name="link_color">#324f85</color>
     <color name="light_green">#ccda2d</color>
     <color name="orange">#f26f1f</color>
