fix gradle error

--- a/SECB/app/src/main/res/layout/email_input.xml
+++ b/SECB/app/src/main/res/layout/email_input.xml
@@ -24,5 +24,6 @@
         android:singleLine="true"
         android:hint="@string/email_address"
         android:layout_toRightOf="@+id/imgv_emailIcon"
-        android:id="@+id/edt_email" />
+        android:id="@+id/edt_email"
+        />
 </RelativeLayout>
