--- a/SECB/app/src/main/res/layout-ar/menu.xml
+++ b/SECB/app/src/main/res/layout-ar/menu.xml
@@ -2,13 +2,15 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/menu_bg" >
+    android:background="@drawable/menu_bg">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Items"
-        android:layout_centerInParent="true"
-        android:textColor="@color/white" />
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/menuItemRecyclerView"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginBottom="@dimen/menu_margin_top"
+        android:layout_marginTop="@dimen/menu_margin_top">
+
+    </android.support.v7.widget.RecyclerView>
 
 </RelativeLayout>
