--- a/SECB/app/src/main/res/layout-ar/menu_item_view.xml
+++ b/SECB/app/src/main/res/layout-ar/menu_item_view.xml
@@ -1,64 +1,65 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<RelativeLayout  xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
     <ImageView
+        android:id="@+id/image_itemIcon"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:src="@drawable/home_icon"
-        android:layout_gravity="center_vertical"
-        android:visibility="visible"
         android:layout_alignParentRight="true"
         android:layout_centerVertical="true"
-        android:id="@+id/image_itemIcon"
-        android:layout_marginRight="@dimen/menu_item_icon_horizontal_margin"/>
-
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:textSize="@dimen/menu_item_text_size"
-        android:text="@string/home"
-        android:layout_centerVertical="true"
+        android:layout_gravity="center_vertical"
         android:layout_marginRight="@dimen/menu_item_icon_horizontal_margin"
-        android:padding="@dimen/login_input_text_pad"
-        android:singleLine="true"
-        android:layout_toLeftOf="@+id/image_itemIcon"
-        android:gravity="right"
-        android:id="@+id/text_itemText" />
-</RelativeLayout>
-
-
-<!--<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:orientation="horizontal"
-    android:weightSum="7"
-    android:clickable="true"
-    android:background="#00ff00"
-    >
-
-
-    <ImageView
-        android:id="@+id/image_itemIcon"
-        android:layout_width="0dp"
-        android:layout_height="match_parent"
-        android:layout_weight="1"
         android:src="@drawable/home_icon"
-        android:gravity="center_vertical"
-        android:paddingLeft="@dimen/menu_item_icon_horizontal_margin"
-        />
+        android:visibility="visible" />
 
     <TextView
         android:id="@+id/text_itemText"
-        android:layout_width="0dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_weight="6"
+        android:layout_centerVertical="true"
+        android:layout_marginRight="@dimen/menu_item_icon_horizontal_margin"
+        android:layout_toLeftOf="@+id/image_itemIcon"
+        android:gravity="right"
+        android:padding="@dimen/login_input_text_pad"
+        android:singleLine="true"
         android:text="@string/home"
-        android:gravity="center_vertical"
-        android:textSize="25sp"
-        android:paddingLeft="@dimen/menu_item_icon_horizontal_margin"/>
+        android:textColor="@color/white"
+        android:textSize="@dimen/menu_item_text_size" />
+</RelativeLayout>
 
-</LinearLayout>-->
+
+    <!--<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:weightSum="7"
+        android:clickable="true"
+        android:background="#00ff00"
+        >
+
+
+        <ImageView
+            android:id="@+id/image_itemIcon"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:src="@drawable/home_icon"
+            android:gravity="center_vertical"
+            android:paddingLeft="@dimen/menu_item_icon_horizontal_margin"
+            />
+
+        <TextView
+            android:id="@+id/text_itemText"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="6"
+            android:text="@string/home"
+            android:gravity="center_vertical"
+            android:textSize="25sp"
+            android:paddingLeft="@dimen/menu_item_icon_horizontal_margin"/>
+
+    </LinearLayout>-->
 
