--- a/SECB/app/src/main/res/layout/header.xml
+++ b/SECB/app/src/main/res/layout/header.xml
@@ -1,46 +1,63 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="50dp"
-    android:id="@+id/layoutContainerHeader"
-    android:clickable="true"
+    android:layout_height="@dimen/header_height"
     android:orientation="vertical"
-    android:background="#99909090" >
+    android:background="@color/sceb_blue">
 
-    <ImageView
-        android:id="@+id/imageViewBackHeader"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentRight="true"
-        android:layout_centerVertical="true"
-
-        android:layout_marginLeft="20dp"
-        android:layout_marginRight="20dp"
-        android:src="@drawable/header_back_btn_ar" />
-
-    <TextView
-        android:id="@+id/textViewTitleHeader"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:gravity="center"
-        android:text=""
-        android:layout_centerVertical="true"
-        android:textColor="@color/white"
-        android:textStyle="bold"
-        android:visibility="visible"/>
+        android:layout_height="@dimen/padding_for_statusbar"
+        android:orientation="vertical"
+        android:background="@color/sceb_blue">
+    </LinearLayout>
+    <RelativeLayout
+        android:id="@+id/layoutContainerHeader"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@color/sceb_blue"
+        android:clickable="true"
+        android:orientation="vertical">
+
+        <ImageView
+            android:id="@+id/imageViewBackHeader"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentRight="true"
+            android:layout_centerVertical="true"
+
+            android:paddingLeft="@dimen/header_menu_icon_margin_start"
+            android:paddingRight="@dimen/header_menu_icon_margin_end"
+            android:src="@drawable/header_back_btn_ar" />
+
+        <TextView
+            android:id="@+id/textViewTitleHeader"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_centerVertical="true"
+            android:layout_toRightOf="@+id/imageViewMenuHeader"
+            android:paddingRight="@dimen/header_menu_icon_margin_end"
+            android:text="@string/home"
+            android:textColor="@color/white"
+            android:textSize="@dimen/header_title_text_size"
+            android:textStyle="bold"
+            android:visibility="visible" />
 
 
+        <ImageView
+            android:id="@+id/imageViewMenuHeader"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentLeft="true"
+            android:layout_centerVertical="true"
+            android:paddingBottom="@dimen/header_menu_icon_margin_start"
+            android:paddingLeft="@dimen/header_menu_icon_margin_start"
+            android:paddingRight="@dimen/header_menu_icon_margin_end"
+            android:paddingTop="@dimen/header_menu_icon_margin_start"
+            android:src="@drawable/menu_button"
+            android:visibility="visible" />
 
-    <ImageView
-        android:id="@+id/imageViewMenuHeader"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_centerVertical="true"
-        android:paddingLeft="20dp"
-        android:paddingRight="20dp"
-        android:src="@drawable/menu_button"
-        android:visibility="visible" />
-
-</RelativeLayout>
+    </RelativeLayout>
+</LinearLayout>
