--- a/SECB/app/src/main/res/layout/main.xml
+++ b/SECB/app/src/main/res/layout/main.xml
@@ -26,7 +26,7 @@
             android:layout_gravity="center_horizontal" />
     </RelativeLayout>
 
-    <include android:id="@+id/menuContainer" layout="@layout/side_menu"/>
+    <include android:id="@+id/menuContainer" layout="@layout/menu_fagment"/>
 
 
 </android.support.v4.widget.DrawerLayout>
