--- a/SECB/app/src/main/res/values-hdpi/dimens.xml
+++ b/SECB/app/src/main/res/values-hdpi/dimens.xml
@@ -23,5 +23,28 @@
     <dimen name="menu_item_vertical_margin">30dp</dimen> <!-- 75PX - HEIGHT -->
     <dimen name="menu_margin_top">40dp</dimen> <!-- 100PX - HEIGHT -->
     <dimen name="menu_item_text_size">11sp</dimen> <!-- 28PX - HEIGHT -->
+    <dimen name="menu_width">222dp</dimen> <!-- 500PX - WIDTH -->
+
+    <dimen name="header_menu_icon_margin_start">17dp</dimen> <!-- 38PX - WIDTH -->
+    <dimen name="header_menu_icon_margin_end">32dp</dimen> <!-- 73PX - WIDTH -->
+    <dimen name="header_title_text_size">16sp</dimen><!-- 40PX - HEIGHT -->
+
+    <dimen name="home_graphs_card_margin_top">4dp</dimen> <!-- 10PX - HEIGHT -->
+    <dimen name="home_graphs_card_height">128dp</dimen> <!-- 324PX - HEIGHT -->
+    <dimen name="home_graphs_card_padding">10dp</dimen> <!-- 25PX - HEIGHT -->
+    <dimen name="home_graphs_card_vertical_margin">6dp</dimen> <!-- 15PX - HEIGHT -->
+    <dimen name="home_graphs_wheel_size">51dp</dimen> <!-- 128PX - HEIGHT -->
+    <dimen name="home_graphs_value_text_size">19dp</dimen> <!-- 48PX - HEIGHT -->
+    <dimen name="home_graphs_title_text_size">11dp</dimen> <!-- 27PX - HEIGHT -->
+    <dimen name="home_graphs_horizontal_margin">36dp</dimen> <!-- 90PX - HEIGHT -->
+
+    <dimen name="event_card_margin">8dp</dimen> <!-- 20PX - HEIGHT -->
+    <dimen name="event_card_h1_text_size">11dp</dimen> <!-- 28PX - HEIGHT -->
+    <dimen name="event_card_h2_text_size">10dp</dimen> <!-- 26PX - HEIGHT -->
+    <dimen name="event_card_h3_text_size">9dp</dimen> <!-- 22PX - HEIGHT -->
+
+    <dimen name="home_news_recycler_height">123dp</dimen> <!-- 310PX - HEIGHT -->
+    <dimen name="home_news_recycler_items_margin">10dp</dimen> <!-- 25PX - HEIGHT -->
+
 
 </resources>
