--- a/SECB/app/src/main/res/values-xhdpi/dimens.xml
+++ b/SECB/app/src/main/res/values-xhdpi/dimens.xml
@@ -23,5 +23,28 @@
     <dimen name="menu_item_vertical_margin">38dp</dimen> <!-- 75PX - HEIGHT -->
     <dimen name="menu_margin_top">50dp</dimen> <!-- 100PX - HEIGHT -->
     <dimen name="menu_item_text_size">14sp</dimen> <!-- 28PX - HEIGHT -->
+    <dimen name="menu_width">250dp</dimen> <!-- 500PX - WIDTH -->
 
+
+    <dimen name="header_menu_icon_margin_start">19dp</dimen> <!-- 38PX - WIDTH -->
+    <dimen name="header_menu_icon_margin_end">37dp</dimen> <!-- 73PX - WIDTH -->
+    <dimen name="header_title_text_size">20sp</dimen><!-- 40PX - HEIGHT -->
+
+
+    <dimen name="home_graphs_card_margin_top">5dp</dimen> <!-- 10PX - HEIGHT -->
+    <dimen name="home_graphs_card_height">162dp</dimen> <!-- 324PX - HEIGHT -->
+    <dimen name="home_graphs_card_padding">13dp</dimen> <!-- 25PX - HEIGHT -->
+    <dimen name="home_graphs_card_vertical_margin">8dp</dimen> <!-- 15PX - HEIGHT -->
+    <dimen name="home_graphs_wheel_size">64dp</dimen> <!-- 128PX - HEIGHT -->
+    <dimen name="home_graphs_value_text_size">24dp</dimen> <!-- 48PX - HEIGHT -->
+    <dimen name="home_graphs_title_text_size">14dp</dimen> <!-- 27PX - HEIGHT -->
+    <dimen name="home_graphs_horizontal_margin">45dp</dimen> <!-- 90PX - HEIGHT -->
+
+    <dimen name="event_card_margin">10dp</dimen> <!-- 20PX - HEIGHT -->
+    <dimen name="event_card_h1_text_size">14dp</dimen> <!-- 28PX - HEIGHT -->
+    <dimen name="event_card_h2_text_size">13dp</dimen> <!-- 26PX - HEIGHT -->
+    <dimen name="event_card_h3_text_size">11dp</dimen> <!-- 22PX - HEIGHT -->
+
+    <dimen name="home_news_recycler_height">155dp</dimen> <!-- 310PX - HEIGHT -->
+    <dimen name="home_news_recycler_items_margin">13dp</dimen> <!-- 25PX - HEIGHT -->
 </resources>
