--- a/SECB/app/src/main/res/layout/reset_password.xml
+++ b/SECB/app/src/main/res/layout/reset_password.xml
@@ -34,24 +34,6 @@
         <!-- email-->
         <include layout="@layout/email_input"/>
 
-        <!--<TableRow android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-            <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:src="@drawable/email_icon"
-                android:layout_gravity="center_vertical"
-                android:visibility="visible"/>
-            <EditText
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:textSize="@dimen/login_input_text_size"
-                android:layout_marginLeft="@dimen/login_input_text_margin_left"
-                android:padding="@dimen/login_input_text_pad"
-                android:singleLine="true"
-                android:hint="@string/email_address"
-                android:id="@+id/edt_email" />
-        </TableRow>-->
 
     </LinearLayout>
 
@@ -61,7 +43,7 @@
         android:layout_height="@dimen/login_button_height"
         android:text="@string/resetPassword"
         android:textSize="@dimen/login_button_text_size"
-        android:textColor="@color/sceb_dark_blue"
+        android:textColor="@color/secb_dark_text"
         android:background="@color/sceb_orange"
         android:layout_marginTop="@dimen/login_forget_pass_vertical_margin"
         android:id="@+id/btn_resetPassword" />
