--- a/SECB/app/src/main/res/values/colors.xml
+++ b/SECB/app/src/main/res/values/colors.xml
@@ -22,6 +22,10 @@
     <color name="graph_color_inProgress">#23a9df</color>
 
 
+<!--text colors-->
+    <color name="secb_dark_text">#122d53</color>
+    <color name="secb_light_text">#ffffff</color>
+    <color name="secb_grey_text">#555555</color>
 
 
     <color name="link_color">#324f85</color>
