--- a/SECB/app/src/main/res/layout-ar/home_services_request_title.xml
+++ b/SECB/app/src/main/res/layout-ar/home_services_request_title.xml
@@ -21,7 +21,7 @@
         android:layout_height="wrap_content"
         android:layout_centerVertical="true"
         android:layout_toLeftOf="@+id/imageViewIcon"
-        android:textColor="@color/sceb_dark_blue"
+        android:textColor="@color/secb_dark_text"
         android:text="@string/services_requests"
         android:textSize="@dimen/header_title_text_size"
         android:textStyle="bold"
