--- a/SECB/app/src/main/res/layout-ar/menu_item_view.xml
+++ b/SECB/app/src/main/res/layout-ar/menu_item_view.xml
@@ -57,7 +57,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="6"
-            android:text="@string/home"
+            android:text="@string/home_fragment"
             android:gravity="center_vertical"
             android:textSize="25sp"
             android:paddingLeft="@dimen/menu_item_icon_horizontal_margin"/>
