--- a/SECB/app/src/main/res/layout/event_card.xml
+++ b/SECB/app/src/main/res/layout/event_card.xml
@@ -29,7 +29,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Saudi Arabia has enhanced the development of exhibitions."
-            android:textColor="@color/sceb_dark_blue"
+            android:textColor="@color/secb_dark_text"
             android:textSize="@dimen/event_card_h1_text_size"
             android:layout_weight="1"/>
 
@@ -38,7 +38,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Saudi Arabia has enhanced the development of exhibitions."
-            android:textColor="@color/darkgrey_color"
+            android:textColor="@color/secb_grey_text"
             android:textSize="@dimen/event_card_h2_text_size"
             android:layout_weight="1"/>
 
@@ -64,7 +64,7 @@
                 android:text="2:30 PM"
                 android:layout_gravity="center_vertical"
                 android:layout_weight="1"
-                android:textColor="@color/sceb_dark_blue"
+                android:textColor="@color/secb_dark_text"
                 android:textSize="@dimen/event_card_h3_text_size"/>
 
             <ImageView
@@ -82,7 +82,7 @@
                 android:text="Jaddah"
                 android:layout_gravity="center_vertical"
                 android:layout_weight="1"
-                android:textColor="@color/sceb_dark_blue"
+                android:textColor="@color/secb_dark_text"
                 android:textSize="@dimen/event_card_h3_text_size"/>
 
             <ImageView
@@ -100,7 +100,7 @@
                 android:text="Organization"
                 android:layout_gravity="center_vertical"
                 android:layout_weight="1"
-                android:textColor="@color/sceb_dark_blue"
+                android:textColor="@color/secb_dark_text"
                 android:textSize="@dimen/event_card_h3_text_size"/>
         </LinearLayout>
     </LinearLayout>
