--- a/SECB/app/src/main/res/values-hdpi/dimens.xml
+++ b/SECB/app/src/main/res/values-hdpi/dimens.xml
@@ -1,5 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+
+    <dimen name="base_filter_btn_margin">17dp</dimen> <!-- 42PX - HEIGHT -->
+
+    <dimen name="login_container_width">278dp</dimen> <!-- 624PX - WIDTH -->
     <dimen name="login_logo_margin_top">44dp</dimen> <!-- 112PX - HEIGHT -->
     <dimen name="login_logo_margin_bottom">34dp</dimen> <!-- 85PX - HEIGHT -->
     <dimen name="login_page_horizontal_pad">22dp</dimen> <!-- 48PX - WIDTH -->
@@ -16,6 +20,8 @@
     <dimen name="login_button_height">40dp</dimen> <!-- 91PX - WIDTH -->
     <dimen name="login_button_text_size">15sp</dimen> <!-- 33PX - WIDTH -->
     <dimen name="login_button_signup_margin_top">9dp</dimen> <!-- 20PX - WIDTH -->
+    <dimen name="login_logo_img_width">131dp</dimen> <!-- 294PX - WIDTH -->
+    <dimen name="login_logo_img_height">85dp</dimen> <!-- 215PX - HEIGHT -->
 
     <dimen name="forget_pass_input_container_vertical_pad">10dp</dimen> <!-- 25PX - HEIGHT -->
 
@@ -42,9 +48,14 @@
     <dimen name="event_card_h1_text_size">11dp</dimen> <!-- 28PX - HEIGHT -->
     <dimen name="event_card_h2_text_size">10dp</dimen> <!-- 26PX - HEIGHT -->
     <dimen name="event_card_h3_text_size">9dp</dimen> <!-- 22PX - HEIGHT -->
+    <dimen name="home_event_card_height">80dp</dimen> <!-- 200PX - HEIGHT -->
 
     <dimen name="home_news_recycler_height">123dp</dimen> <!-- 310PX - HEIGHT -->
     <dimen name="home_news_recycler_items_margin">10dp</dimen> <!-- 25PX - HEIGHT -->
+    <dimen name="news_item_card_height">56dp</dimen> <!-- 140PX - HEIGHT -->
 
+    <dimen name="news_filter_padding">14dp</dimen> <!-- 30PX - WIDTH -->
+    <dimen name="news_filter_text_size">8dp</dimen> <!-- 21PX - HEIGHT -->
+    <dimen name="news_filter_btn_text_size">12dp</dimen> <!-- 30PX - HEIGHT -->
 
 </resources>
