--- a/SECB/app/src/main/res/values-mdpi/dimens.xml
+++ b/SECB/app/src/main/res/values-mdpi/dimens.xml
@@ -1,5 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+
+    <dimen name="base_filter_btn_margin">14dp</dimen> <!-- 42PX - HEIGHT -->
+
+    <dimen name="login_container_width">277dp</dimen> <!-- 624PX - WIDTH -->
     <dimen name="login_logo_margin_top">39dp</dimen> <!-- 112PX - HEIGHT -->
     <dimen name="login_logo_margin_bottom">30dp</dimen> <!-- 85PX - HEIGHT -->
     <dimen name="login_page_horizontal_pad">21dp</dimen> <!-- 48PX - WIDTH -->
@@ -16,6 +20,8 @@
     <dimen name="login_button_height">40dp</dimen> <!-- 91PX - WIDTH -->
     <dimen name="login_button_text_size">14sp</dimen> <!-- 33PX - WIDTH -->
     <dimen name="login_button_signup_margin_top">8dp</dimen> <!-- 20PX - WIDTH -->
+    <dimen name="login_logo_img_width">130dp</dimen> <!-- 294PX - WIDTH -->
+    <dimen name="login_logo_img_height">76dp</dimen> <!-- 215PX - HEIGHT -->
 
     <dimen name="forget_pass_input_container_vertical_pad">8dp</dimen> <!-- 25PX - HEIGHT -->
 
@@ -44,8 +50,14 @@
     <dimen name="event_card_h1_text_size">9dp</dimen> <!-- 28PX - HEIGHT -->
     <dimen name="event_card_h2_text_size">9dp</dimen> <!-- 26PX - HEIGHT -->
     <dimen name="event_card_h3_text_size">7dp</dimen> <!-- 22PX - HEIGHT -->
+    <dimen name="home_event_card_height">71dp</dimen> <!-- 200PX - HEIGHT -->
 
     <dimen name="home_news_recycler_height">110dp</dimen> <!-- 310PX - HEIGHT -->
     <dimen name="home_news_recycler_items_margin">8dp</dimen> <!-- 25PX - HEIGHT -->
+    <dimen name="news_item_card_height">49dp</dimen> <!-- 140PX - HEIGHT -->
+
+    <dimen name="news_filter_padding">13dp</dimen> <!-- 30PX - WIDTH -->
+    <dimen name="news_filter_text_size">7dp</dimen> <!-- 21PX - HEIGHT -->
+    <dimen name="news_filter_btn_text_size">10dp</dimen> <!-- 30PX - HEIGHT -->
 
 </resources>
