--- a/SECB/app/src/main/res/values-hdpi/dimens.xml
+++ b/SECB/app/src/main/res/values-hdpi/dimens.xml
@@ -57,5 +57,14 @@
     <dimen name="news_filter_padding">14dp</dimen> <!-- 30PX - WIDTH -->
     <dimen name="news_filter_text_size">8dp</dimen> <!-- 21PX - HEIGHT -->
     <dimen name="news_filter_btn_text_size">12dp</dimen> <!-- 30PX - HEIGHT -->
+    <dimen name="news_details_padding">13dp</dimen> <!-- 33PX - HEIGHT -->
+    <dimen name="news_details_img_height">186dp</dimen> <!-- 470PX - HEIGHT -->
+    <dimen name="news_details_newTitle_text_size">11dp</dimen> <!-- 28PX - HEIGHT -->
+    <dimen name="news_details_newDate_text_size">10dp</dimen> <!-- 26PX - HEIGHT -->
+    <dimen name="news_details_newBody_text_size">11dp</dimen> <!-- 27PX - HEIGHT -->
+    <dimen name="news_details_newTitle_text_container">39dp</dimen> <!-- 99PX - HEIGHT -->
+    <dimen name="news_details_newDate_text_container">22dp</dimen> <!-- 55PX - HEIGHT -->
+    <dimen name="news_details_text_container_padding">8dp</dimen> <!-- 20PX - HEIGHT -->
+
 
 </resources>
