--- a/SECB/app/src/main/res/values-mdpi/dimens.xml
+++ b/SECB/app/src/main/res/values-mdpi/dimens.xml
@@ -59,5 +59,14 @@
     <dimen name="news_filter_padding">13dp</dimen> <!-- 30PX - WIDTH -->
     <dimen name="news_filter_text_size">7dp</dimen> <!-- 21PX - HEIGHT -->
     <dimen name="news_filter_btn_text_size">10dp</dimen> <!-- 30PX - HEIGHT -->
+    <dimen name="news_details_padding">11dp</dimen> <!-- 33PX - HEIGHT -->
+    <dimen name="news_details_img_height">167dp</dimen> <!-- 470PX - HEIGHT -->
+    <dimen name="news_details_newTitle_text_size">9dp</dimen> <!-- 28PX - HEIGHT -->
+    <dimen name="news_details_newDate_text_size">9dp</dimen> <!-- 26PX - HEIGHT -->
+    <dimen name="news_details_newBody_text_size">9dp</dimen> <!-- 27PX - HEIGHT -->
+    <dimen name="news_details_newTitle_text_container">35dp</dimen> <!-- 99PX - HEIGHT -->
+    <dimen name="news_details_newDate_text_container">19dp</dimen> <!-- 55PX - HEIGHT -->
+    <dimen name="news_details_text_container_padding">7dp</dimen> <!-- 20PX - HEIGHT -->
+
 
 </resources>
