done: -open news details from home. -open news list form menu. -event list -event details -event filter -e-guide list -e-guide details -e-guide filter
Issues:
- filter radioButton design
-apply fonts
-map relaod (with every eventFragment open)

--- a/SECB/app/src/main/res/layout-ar/event_card.xml
+++ b/SECB/app/src/main/res/layout-ar/event_card.xml
@@ -25,7 +25,9 @@
             android:textColor="@color/secb_dark_text"
             android:textSize="@dimen/event_card_h1_text_size"
             android:layout_weight="1"
-            android:maxLines="2"/>
+            android:maxLines="2"
+            android:ellipsize="end"
+            />
 
         <TextView
             android:id="@+id/txtv_eventDescription"
@@ -35,6 +37,7 @@
             android:textColor="@color/secb_grey_text"
             android:textSize="@dimen/event_card_h2_text_size"
             android:layout_weight="1"
+            android:ellipsize="end"
             android:maxLines="2"/>
 
         <LinearLayout
@@ -59,7 +62,9 @@
                 android:layout_height="wrap_content"
                 android:text="2:30 PM"
                 android:layout_gravity="center_vertical"
+                android:maxLines="1"
                 android:layout_weight="1"
+                android:ellipsize="end"
                 android:textColor="@color/secb_dark_text"
                 android:textSize="@dimen/event_card_h3_text_size"/>
 
@@ -77,7 +82,9 @@
                 android:layout_height="wrap_content"
                 android:text="Jaddah"
                 android:layout_gravity="center_vertical"
+                android:maxLines="1"
                 android:layout_weight="1"
+                android:ellipsize="end"
                 android:textColor="@color/secb_dark_text"
                 android:textSize="@dimen/event_card_h3_text_size"/>
 
@@ -95,7 +102,9 @@
                 android:layout_height="wrap_content"
                 android:text="Organization"
                 android:layout_gravity="center_vertical"
+                android:maxLines="1"
                 android:layout_weight="1"
+                android:ellipsize="end"
                 android:textColor="@color/secb_dark_text"
                 android:textSize="@dimen/event_card_h3_text_size"/>
         </LinearLayout>
