--- a/SECB/app/src/main/res/layout/organizer_item_card.xml
+++ b/SECB/app/src/main/res/layout/organizer_item_card.xml
@@ -9,7 +9,7 @@
     android:weightSum="5">
 
     <ImageView
-        android:id="@+id/imgv_newImg"
+        android:id="@+id/imgv_organizerImg"
         android:layout_width="0dp"
         android:layout_height="match_parent"
         android:layout_marginRight="@dimen/event_card_margin"
@@ -25,7 +25,7 @@
         android:weightSum="2.5">
 
         <TextView
-            android:id="@+id/txtv_newTitle"
+            android:id="@+id/txtv_organizerTitle"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
@@ -36,33 +36,14 @@
             android:textSize="@dimen/event_card_h1_text_size" />
 
         <TextView
-            android:id="@+id/txtv_newDescription"
+            android:id="@+id/txtv_organizerDescription"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:maxLines="1"
+            android:maxLines="2"
             android:ellipsize="end"
             android:text="Saudi Arabia has enhanced the development of exhibitions."
             android:textColor="@color/darkgrey_color"
             android:textSize="@dimen/event_card_h2_text_size" />
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight="0.5"
-            android:orientation="horizontal">
-
-            <TextView
-                android:id="@+id/txtv_newTime"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_vertical"
-                android:gravity="right"
-                android:maxLines="1"
-                android:text="2:30 PM"
-                android:textColor="@color/darkgrey_color"
-                android:textSize="@dimen/event_card_h3_text_size" />
-
-        </LinearLayout>
     </LinearLayout>
 </LinearLayout>
